examples/test/testpolicy7738.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7738
  namespace: namespace324
spec:
  podSelector:
    matchLabels:
      key28: value1
      key1: value34
      key5: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value32
          key0: value24
          key40: value33
      podSelector:
        matchLabels:
          key1: value19
          key41: value6
